--- a/recipes/tomato-pork.html
+++ b/recipes/tomato-pork.html
@@ -15,25 +15,39 @@
       width="450"
     />
     <h3>
-      <em>Rich, tasty, and easy to make with delicious, on hand ingredients! Serve
-      with egg noodles, if you want.</em>
+      <em
+        >Rich, tasty, and easy to make with delicious, on hand ingredients!
+        Serve with egg noodles, if you want.</em
+      >
     </h3>
     <p>
-      Heat the oil in a skillet over high heat, and quickly brown the pork chops on both sides. Transfer chops to platter, and keep warm.Reduce skillet heat to medium, and cook the onion until tender. Mix in the sugar, chili powder, fennel, red pepper flakes, and oregano. Stir in the tomato sauce, water, and Worcestershire sauce, and bring to a boil.Return the pork chops to the skillet. Cover, reduce heat to low, and cook 10 minutes. Remove cover, and continue cooking 15 minutes, or to desired doneness.
+      Heat the oil in a skillet over high heat, and quickly brown the pork chops
+      on both sides. Transfer chops to platter, and keep warm.Reduce skillet
+      heat to medium, and cook the onion until tender. Mix in the sugar, chili
+      powder, fennel, red pepper flakes, and oregano. Stir in the tomato sauce,
+      water, and Worcestershire sauce, and bring to a boil.Return the pork chops
+      to the skillet. Cover, reduce heat to low, and cook 10 minutes. Remove
+      cover, and continue cooking 15 minutes, or to desired doneness.
     </p>
     <ul>
-      <li>2 tablespoons olive oil, divided </li>
-      <li> 4 boneless pork loin chops, pounded thin </li>
-      <li> 1 large onion, sliced </li>
-      <li> ½ teaspoon sugar </li>
-      <li> 2 teaspoons chili powder </li>
-      <li> ½ teaspoon fennel seeds, crushed </li>
-      <li> ½ teaspoon red pepper flakes </li>
-      <li> 1 teaspoon dried oregano </li>
-      <li> 1 (8 ounce) can tomato sauce </li>
-      <li> 2 fluid ounces water </li>
-      <li> 1 teaspoon Worcestershire sauce </li>
-      <li> salt and pepper to taste </li>
+      <li>2 tablespoons olive oil, divided</li>
+      <li>4 boneless pork loin chops, pounded thin</li>
+      <li>1 large onion, sliced</li>
+      <li>½ teaspoon sugar</li>
+      <li>2 teaspoons chili powder</li>
+      <li>½ teaspoon fennel seeds, crushed</li>
+      <li>½ teaspoon red pepper flakes</li>
+      <li>1 teaspoon dried oregano</li>
+      <li>1 (8 ounce) can tomato sauce</li>
+      <li>2 fluid ounces water</li>
+      <li>1 teaspoon Worcestershire sauce</li>
+      <li>salt and pepper to taste</li>
+    </ul>
+    <h3>Steps</h3>
+    <ul>
+      <li>Heat the oil in a skillet over high heat, and quickly brown the pork chops on both sides. Transfer chops to platter, and keep warm.</li>
+      <li>Reduce skillet heat to medium, and cook the onion until tender. Mix in the sugar, chili powder, fennel, red pepper flakes, and oregano. Stir in the tomato sauce, water, and Worcestershire sauce, and bring to a boil.</li>
+      <li>Return the pork chops to the skillet. Cover, reduce heat to low, and cook 10 minutes. Remove cover, and continue cooking 15 minutes, or to desired doneness.</li>
     </ul>
   </body>
 </html>
