added last recipe and corrected typos

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <p><a href="./recipes/tomato-pork.html"> Tomato pork loin chops.</a></p>
+    <ul>
+      <li><a href="./recipes/tomato-pork.html">Tomato pork loin chops</a></li>
+      <li><a href="./recipes/pumpkin-chessecake.html">Double Layer Pumpkin Cheesecake</a></li>
+      <li><a href="./recipes/bloody-mary.html">Spicy Bloody Mary Mix</a></li>
+    </ul>
   </body>
 </html>
