--- a/recipes/tomato-pork.html
+++ b/recipes/tomato-pork.html
@@ -20,15 +20,9 @@
       >
     </h3>
     <p>
-      Heat the oil in a skillet over high heat, and quickly brown the pork chops
-      on both sides. Transfer chops to platter, and keep warm.Reduce skillet
-      heat to medium, and cook the onion until tender. Mix in the sugar, chili
-      powder, fennel, red pepper flakes, and oregano. Stir in the tomato sauce,
-      water, and Worcestershire sauce, and bring to a boil.Return the pork chops
-      to the skillet. Cover, reduce heat to low, and cook 10 minutes. Remove
-      cover, and continue cooking 15 minutes, or to desired doneness.
+      This is definitely my favorite meal, I eat this only at family gatherings to double the pleasure!
     </p>
-    <ol>
+    <ul>
       <li>2 tablespoons olive oil, divided</li>
       <li>4 boneless pork loin chops, pounded thin</li>
       <li>1 large onion, sliced</li>
@@ -43,7 +37,7 @@
       <li>salt and pepper to taste</li>
     </ul>
     <h3>Steps</h3>
-    <ul>
+    <ol>
       <li>Heat the oil in a skillet over high heat, and quickly brown the pork chops on both sides. Transfer chops to platter, and keep warm.</li>
       <li>Reduce skillet heat to medium, and cook the onion until tender. Mix in the sugar, chili powder, fennel, red pepper flakes, and oregano. Stir in the tomato sauce, water, and Worcestershire sauce, and bring to a boil.</li>
       <li>Return the pork chops to the skillet. Cover, reduce heat to low, and cook 10 minutes. Remove cover, and continue cooking 15 minutes, or to desired doneness.</li>
