--- a/recipes/pumpkin-chessecake.html
+++ b/recipes/pumpkin-chessecake.html
@@ -20,14 +20,7 @@
       >
     </h3>
     <p>
-      Preheat oven to 325 degrees F (165 degrees C).In a large bowl, combine
-      cream cheese, sugar and vanilla. Beat until smooth. Blend in eggs one at a
-      time. Remove 1 cup of batter and spread into bottom of crust; set aside.
-      Add pumpkin, cinnamon, cloves and nutmeg to the remaining batter and stir
-      gently until well blended. Carefully spread over the batter in the crust.
-      Bake in preheated oven for 35 to 40 minutes, or until center is almost
-      set. Allow to cool, then refrigerate for 3 hours or overnight. Cover with
-      whipped topping before serving.
+      This is my favorite dessert, I eat quickly main dish to eat this wonderful dessert. Give it a try you will definitely love it!
     </p>
     <ul>
       <li> 2 (8 ounce) packages cream cheese, softened </li>
